@@ -24,6 +24,22 @@ major = 0
 filename = _Deparsed_XSubs.pm
 match = \.iml$
 
+[GenerateFile]
+filename = CONTRIBUTING
+content_is_template = 1
+content = Please use project's GitHub repository for your contributions.
+content =
+content = To contribute to this distribution you may:
+content =
+content = 1. Create pull requests at: https://github.com/rwp-cpan/{{$dist -> name}}/pulls
+content =
+content = 2. File issues at: https://github.com/rwp-cpan/{{$dist -> name}}/issues
+content =
+content = Thanks
+; Eg. https://metacpan.org/dist/Dist-Zilla/contribute
+; Docs: https://metacpan.org/pod/Dist::Zilla::Plugin::GenerateFile
+
+
 ; External plugins
 [PodWeaver]
 
@@ -36,7 +52,7 @@ issues = 1
 -bundle = @Git
 ; Includes the Git::Check, Git::Commit, Git::Tag, and Git::Push plugins
 -remove = Git::Check
--remove = Git::Push
+;-remove = Git::Push
 ; TODO: add username and SSH authentication
 
 [Git::Check]
